Fixed zoom and legend spacing

--- a/projects/mistral/frontend/css/style.css
+++ b/projects/mistral/frontend/css/style.css
@@ -631,13 +631,14 @@ input[type=number]::-webkit-outer-spin-button {
   background: rgba(255, 255, 255, 0.8);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  line-height: 12px;
+  line-height: 13px;
   color: #555;
 }
 
 .legend i {
   width: 16px;
   height: 12px;
+  line-height: 13px;
   float: left;
   margin-right: 8px;
   opacity: 0.7;
